<resources>
    <string name="app_name">Budgeteer</string>
    <string name="home">Home</string>
    <string name="sources">Sources</string>
    <string name="statistics">Statistics</string>
    <string name="more">More</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="logout">Logout</string>
    <string name="personalization">Personalization</string>
    <string name="rate_us">Rate Us</string>
    <string name="about">About</string>
    <string name="budgeteer_logo">Budgeteer Logo</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="add">Add</string>
</resources>