<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.flyingjetski.budgeteer.ui.main.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_homeFragment_to_sourcesFragment"
            app:destination="@id/sourcesFragment" />
        <action
            android:id="@+id/action_homeFragment_to_moreFragment"
            app:destination="@id/moreFragment" />
        <action
            android:id="@+id/action_homeFragment_to_statisticsFragment"
            app:destination="@id/statisticsFragment" />
    </fragment>

    <fragment
        android:id="@+id/sourcesFragment"
        android:name="com.flyingjetski.budgeteer.ui.main.SourcesFragment"
        android:label="@string/sources"
        tools:layout="@layout/fragment_sources" >
        <action
            android:id="@+id/action_sourcesFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
        <action
            android:id="@+id/action_sourcesFragment_to_statisticsFragment"
            app:destination="@id/statisticsFragment" />
        <action
            android:id="@+id/action_sourcesFragment_to_moreFragment"
            app:destination="@id/moreFragment" />
        <action
            android:id="@+id/action_sourcesFragment_to_editBudgetFragment"
            app:destination="@id/editBudgetFragment" />
        <action
            android:id="@+id/action_sourcesFragment_to_editSavingFragment"
            app:destination="@id/editSavingFragment" />
        <action
            android:id="@+id/action_sourcesFragment_to_editWalletFragment"
            app:destination="@id/editWalletFragment" />
    </fragment>

    <fragment
        android:id="@+id/statisticsFragment"
        android:name="com.flyingjetski.budgeteer.ui.main.StatisticsFragment"
        android:label="@string/statistics"
        tools:layout="@layout/fragment_statistics" >
        <action
            android:id="@+id/action_statisticsFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
        <action
            android:id="@+id/action_statisticsFragment_to_moreFragment"
            app:destination="@id/moreFragment" />
        <action
            android:id="@+id/action_statisticsFragment_to_sourcesFragment"
            app:destination="@id/sourcesFragment" />
    </fragment>

    <fragment
        android:id="@+id/moreFragment"
        android:name="com.flyingjetski.budgeteer.ui.main.MoreFragment"
        android:label="@string/more"
        tools:layout="@layout/fragment_more" >
        <action
            android:id="@+id/action_moreFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
        <action
            android:id="@+id/action_moreFragment_to_sourcesFragment"
            app:destination="@id/sourcesFragment" />
        <action
            android:id="@+id/action_moreFragment_to_statisticsFragment"
            app:destination="@id/statisticsFragment" />
    </fragment>
    <fragment
        android:id="@+id/editBudgetFragment"
        android:name="com.flyingjetski.budgeteer.ui.add.EditBudgetFragment"
        android:label="EditBudgetFragment">
        <argument
            android:name="budgetId"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/editSavingFragment"
        android:name="com.flyingjetski.budgeteer.ui.add.EditSavingFragment"
        android:label="EditSavingFragment" >
        <argument
            android:name="savingId"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/editWalletFragment"
        android:name="com.flyingjetski.budgeteer.ui.add.EditWalletFragment"
        android:label="EditWalletFragment" >
        <argument
            android:name="walletId"
            app:argType="string" />
    </fragment>
</navigation>